# opengl_2dmap

./: .clang-format  .clangformat  .gitignore  CMakeLists.txt  README.md  check-format.sh  gg.cpp  gg_tests.cpp  glad.c  glfw_helpers.h  main.cpp  reformat-codebase.sh
bb/: run.sh
data/: README.mdown
include/: gg.h
src/common/: 1.cpp  CMakeLists.txt
src/common/include/common/: color.h  gl_check.h  global.h  log.h  os.h  span.hpp
src/dear_imgui/: CMakeLists.txt
src/dear_imgui/imgui/: imconfig.h  imgui_draw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h
src/gg/: CMakeLists.txt  gg.cpp  gg_tests.cpp  gg_tests.cpp2
src/gg/include/gg/: gg.h  math.h
src/glad/: CMakeLists.txt
src/glad/include/KHR/: khrplatform.h
src/glad/include/glad/: glad.h
src/map_compiler/: CMakeLists.txt  map_compiler_lib.cpp  map_compiler_lib.h
src/render_demo/: CMakeLists.txt  glfw_helpers.h  render_demo_main.cpp  test_data.h  test_scenes.h
src/render_demo/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h
src/render_lib/: CMakeLists.txt  debug_lines.cpp
src/render_lib/include/render_lib/: animations.h  camera.h  camera_control.h  camera_control_visuals.h  debug_ctx.h  debug_lines.h  i_render_unit.h  render.h  shader_program.h
src/render_lib/render_units/animatable_line/: animatable_line.cpp  animatable_line.frag.glsl  animatable_line.h  animatable_line.vert.glsl  animatalbe_line.cpp
src/render_lib/render_units/crosshair/: crosshair.frag.glsl  crosshair.vert.glsl  crosshair_unit.h
src/render_lib/render_units/lands/: lands.cpp  lands.frag.glsl  lands.h  lands.vert.glsl
src/render_lib/render_units/lines/: lines.frag.glsl  lines.vert.glsl  lines_unit.h
src/render_lib/render_units/polygon/: polygon.cpp  polygon.frag.glsl  polygon.h  polygon.vert.glsl
src/render_lib/render_units/roads/: debug_ctx.h  roads.frag.glsl  roads.vert.glsl  roads_aa.frag.glsl  roads_aa.vert.glsl  roads_unit.cpp  roads_unit.h  tesselation.h
src/render_lib/render_units/roads_shader_aa/: debug_ctx.h  make_geometry.h  roads.frag.glsl  roads.vert.glsl  roads_shader_aa_unit.cpp  roads_shader_aa_unit.h  types.h
src/render_lib/render_units/triangle/: render_triangle.h  triangle.frag.glsl  triangle.vert.glsl
