file(GLOB_RECURSE H_FILES CONFIGURE_DEPENDS "*.h")
file(GLOB_RECURSE CPP_FILES CONFIGURE_DEPENDS "*.cpp")
add_library(render_lib ${H_FILES} ${CPP_FILES})
target_link_libraries(render_lib PRIVATE glfw glm common glad dear_imgui)
target_include_directories(render_lib PUBLIC "include")
target_include_directories(render_lib PUBLIC ".")
